fix(core/toast) Added fix for the toast message clipping issue (#2328)

--- a/packages/core/src/components/toast/toast.scss
+++ b/packages/core/src/components/toast/toast.scss
@@ -42,26 +42,31 @@
     min-height: 3.5rem;
     width: 100%;
     flex-grow: 1;
-    padding: 0.75rem;
+    padding: 0.75rem 0.75rem 0.25rem;
 
     .toast-icon {
       display: flex;
       align-items: flex-start;
-      margin-right: 0.5rem;
+      padding: 0.25rem;
     }
 
     .toast-content {
       overflow: hidden;
-      text-overflow: ellipsis;
       min-width: 0;
       width: 100%;
+      padding: 0.25rem;
 
       .toast-title {
+        min-width: 0;
         margin: 0.25rem 0px;
+        overflow-wrap: break-word;
+        word-break: break-word;
       }
 
       .toast-message {
         min-width: 0;
+        overflow-wrap: break-word;
+        word-break: break-word;
 
         @include fonts.text-default;
       }
@@ -69,10 +74,6 @@
       .toast-action {
         margin-top: 0.5rem;
       }
-    }
-
-    .toast-icon + .toast-content {
-      max-width: 10.25rem;
     }
   }
 
